--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ notifications:
     on_success: change
     on_failure: always
 script:
+- mkdir ./tmp/
 - bundle exec rubocop
 - bundle exec rspec spec
