drop support for ruby < 2.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ sudo: false
 gemfile:
   - gemfiles/rails_5.gemfile
   - gemfiles/rails_6.gemfile
+  - gemfiles/rails_7.gemfile
 
 rvm:
-  - 2.3
-  - 2.4
-  - 2.5
   - 2.6
   - 2.7
   - 3.0
@@ -27,8 +25,14 @@ script:
 
 matrix:
   exclude:
-    - rvm: 2.3
-      gemfile: gemfiles/rails_6.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/rails_6.gemfile
+    # rails 7 requires ruby > 2.7
+    - rvm: 2.6
+      gemfile: gemfiles/rails_7.gemfile
+    # rails 5 is too old for these ruby versions
+    - rvm: 2.7
+      gemfile: gemfiles/rails_5.gemfile
+    - rvm: 3.0
+      gemfile: gemfiles/rails_5.gemfile
+    - rvm: 3.1
+      gemfile: gemfiles/rails_5.gemfile
   fast_finish: true
